openshift/network-policy/01-ingress-control-for-right.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: "2026-08-05T08:01:07Z"
  labels:
    network-policy-generator.stackrox.io/from-baseline: "true"
  name: stackrox-baseline-generated-two
  namespace: right
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: left
      podSelector:
        matchLabels:
          deployment: one
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      deployment: two
  policyTypes:
  - Ingress
