openshift/network-policy/02-block-egress-right.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: block-egress
  namespace: right
spec:
  podSelector:
    matchLabels:
      deployment: two
  policyTypes:
  - Egress
