openshift/network-policy/np-allow-from-left-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-left-namespace
spec:
  podSelector:
    matchLabels:
      deployment: third
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          projectName: left
